--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <h2 class="card-title">
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
-        <img src="./images/image.jpg" alt="автобус" class="card-img" />
+        <div class="card-image__wrapper">
+          <span class="card-label">&lt;/HTML&gt;</span>
+          <img src="./images/image.jpg" alt="автобус" class="card-image" />
+        </div>
         <div class="card-text__wrapper">
           <p class="card-text">
             Это было самое начало пути. На этом этапе важно было проникнуться
@@ -69,12 +72,435 @@
           </button>
         </div>
       </article>
-      <button class="button-save">
+      <article class="card">
+        <h2 class="card-title">1 спринт: Я — чистый лист</h2>
+        <div class="card-image__wrapper">
+          <span class="card-label">&lt;/HTML&gt;</span>
+          <img
+            src="./images/road.avif"
+            alt="автобус"
+            class="card-image grayscale"
+          />
+        </div>
+        <div class="card-text__wrapper">
+          <p class="card-text">
+            На первых этапах мы работали со страхами и сомнениями, которые часто
+            испытывают новички. Один из них — страх перед чистым листом. Это,
+            конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим
+            ощущением скрываются более глубокие вопросы: с чего начать? а вдруг
+            будет слишком сложно? что, если я не справлюсь?
+          </p>
+          <p class="card-text">
+            Место для ваших воспоминаний о начале первого спринта.
+          </p>
+        </div>
+        <div class="card-buttons">
+          <button class="card-button card__icon-button">
+            <svg
+              class="like-icon"
+              width="27"
+              height="24"
+              viewBox="0 0 27 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M6 0H3V3H6V0Z" fill="black" />
+              <path d="M9 0H6V3H9V0Z" fill="black" />
+              <path d="M3 3H0V6H3V3Z" fill="black" />
+              <path d="M3 6H0V9H3V6Z" fill="black" />
+              <path d="M3 9H0V12H3V9Z" fill="black" />
+              <path d="M12 0H9V3H12V0Z" fill="black" />
+              <path d="M6 12H3V15H6V12Z" fill="black" />
+              <path d="M9 15H6V18H9V15Z" fill="black" />
+              <path d="M12 18H9V21H12V18Z" fill="black" />
+              <path d="M21 0H24V3H21V0Z" fill="black" />
+              <path d="M18 0H21V3H18V0Z" fill="black" />
+              <path d="M24 3H27V6H24V3Z" fill="black" />
+              <path d="M24 6H27V9H24V6Z" fill="black" />
+              <path d="M24 9H27V12H24V9Z" fill="black" />
+              <path d="M15 0H18V3H15V0Z" fill="black" />
+              <path d="M21 12H24V15H21V12Z" fill="black" />
+              <path d="M18 15H21V18H18V15Z" fill="black" />
+              <path d="M15 18H18V21H15V18Z" fill="black" />
+              <path d="M15 3H12V6H15V3Z" fill="black" />
+              <path d="M15 21H12V24H15V21Z" fill="black" />
+            </svg>
+          </button>
+          <button class="card-button button-like">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article class="card">
+        <h2 class="card-title">1 спринт: А если не получится?</h2>
+        <div class="card-image__wrapper">
+          <span class="card-label">&lt;CSS&gt;</span>
+          <img
+            src="./images/nature.avif"
+            alt="автобус"
+            class="card-image hue-rotate"
+          />
+        </div>
+        <div class="card-text__wrapper">
+          <p class="card-text">
+            Первый проект — позади! Но это всё ещё самое начало пути. Радость
+            могла быстро померкнуть и смениться ожиданием провала. Или вы,
+            наоборот, могли вдохновиться успехами и поверить в себя.
+          </p>
+          <p class="card-text">
+            Место для ваших воспоминаний об окончании первого спринта.
+          </p>
+        </div>
+        <div class="card-buttons">
+          <button class="card-button card__icon-button">
+            <svg
+              class="like-icon"
+              width="27"
+              height="24"
+              viewBox="0 0 27 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M6 0H3V3H6V0Z" fill="black" />
+              <path d="M9 0H6V3H9V0Z" fill="black" />
+              <path d="M3 3H0V6H3V3Z" fill="black" />
+              <path d="M3 6H0V9H3V6Z" fill="black" />
+              <path d="M3 9H0V12H3V9Z" fill="black" />
+              <path d="M12 0H9V3H12V0Z" fill="black" />
+              <path d="M6 12H3V15H6V12Z" fill="black" />
+              <path d="M9 15H6V18H9V15Z" fill="black" />
+              <path d="M12 18H9V21H12V18Z" fill="black" />
+              <path d="M21 0H24V3H21V0Z" fill="black" />
+              <path d="M18 0H21V3H18V0Z" fill="black" />
+              <path d="M24 3H27V6H24V3Z" fill="black" />
+              <path d="M24 6H27V9H24V6Z" fill="black" />
+              <path d="M24 9H27V12H24V9Z" fill="black" />
+              <path d="M15 0H18V3H15V0Z" fill="black" />
+              <path d="M21 12H24V15H21V12Z" fill="black" />
+              <path d="M18 15H21V18H18V15Z" fill="black" />
+              <path d="M15 18H18V21H15V18Z" fill="black" />
+              <path d="M15 3H12V6H15V3Z" fill="black" />
+              <path d="M15 21H12V24H15V21Z" fill="black" />
+            </svg>
+          </button>
+          <button class="card-button button-like">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article class="card">
+        <h2 class="card-title">2 спринт: Погоня за идеалом</h2>
+        <div class="card-image__wrapper">
+          <span class="card-label">&lt;desigions&gt;</span>
+          <img
+            src="./images/tree.avif"
+            alt="автобус"
+            class="card-image drop-shadow"
+          />
+        </div>
+        <div class="card-text__wrapper">
+          <p class="card-text">
+            На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы
+            понять, как много ещё впереди. Вы могли попытаться погнаться за
+            идеалом и понять, что он недостижим. А, может, вы вовсе и не
+            подвержены перфекционизму и вместо того, чтобы сделать идеально,
+            старались просто сделать.
+          </p>
+          <p class="card-text">
+            Место для ваших воспоминаний о начале второго спринта.
+          </p>
+        </div>
+        <div class="card-buttons">
+          <button class="card-button card__icon-button">
+            <svg
+              class="like-icon"
+              width="27"
+              height="24"
+              viewBox="0 0 27 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M6 0H3V3H6V0Z" fill="black" />
+              <path d="M9 0H6V3H9V0Z" fill="black" />
+              <path d="M3 3H0V6H3V3Z" fill="black" />
+              <path d="M3 6H0V9H3V6Z" fill="black" />
+              <path d="M3 9H0V12H3V9Z" fill="black" />
+              <path d="M12 0H9V3H12V0Z" fill="black" />
+              <path d="M6 12H3V15H6V12Z" fill="black" />
+              <path d="M9 15H6V18H9V15Z" fill="black" />
+              <path d="M12 18H9V21H12V18Z" fill="black" />
+              <path d="M21 0H24V3H21V0Z" fill="black" />
+              <path d="M18 0H21V3H18V0Z" fill="black" />
+              <path d="M24 3H27V6H24V3Z" fill="black" />
+              <path d="M24 6H27V9H24V6Z" fill="black" />
+              <path d="M24 9H27V12H24V9Z" fill="black" />
+              <path d="M15 0H18V3H15V0Z" fill="black" />
+              <path d="M21 12H24V15H21V12Z" fill="black" />
+              <path d="M18 15H21V18H18V15Z" fill="black" />
+              <path d="M15 18H18V21H15V18Z" fill="black" />
+              <path d="M15 3H12V6H15V3Z" fill="black" />
+              <path d="M15 21H12V24H15V21Z" fill="black" />
+            </svg>
+          </button>
+          <button class="card-button button-like">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article class="card">
+        <h2 class="card-title">2 спринт: О тех, кто рядом</h2>
+        <div class="card-image__wrapper">
+          <span class="card-label">&lt;care&gt;</span>
+          <img
+            src="./images/mountins.avif"
+            alt="автобус"
+            class="card-image invert"
+          />
+        </div>
+        <div class="card-text__wrapper">
+          <p class="card-text">
+            Всё это время вы были не одиноки (хотя, возможно, иногда и
+            чувствовали, что одни против целого мира). Вас окружали
+            одногруппники, команда сопровождения и просто близкие люди, которым
+            можно пожаловаться, если очередной макет просто так не поддавался.
+            Осваивать что-то новое легче, когда рядом есть единомышленники, не
+            правда ли?
+          </p>
+          <p class="card-text">
+            Место для ваших воспоминаний об окончании второго спринта.
+          </p>
+        </div>
+        <div class="card-buttons">
+          <button class="card-button card__icon-button">
+            <svg
+              class="like-icon"
+              width="27"
+              height="24"
+              viewBox="0 0 27 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M6 0H3V3H6V0Z" fill="black" />
+              <path d="M9 0H6V3H9V0Z" fill="black" />
+              <path d="M3 3H0V6H3V3Z" fill="black" />
+              <path d="M3 6H0V9H3V6Z" fill="black" />
+              <path d="M3 9H0V12H3V9Z" fill="black" />
+              <path d="M12 0H9V3H12V0Z" fill="black" />
+              <path d="M6 12H3V15H6V12Z" fill="black" />
+              <path d="M9 15H6V18H9V15Z" fill="black" />
+              <path d="M12 18H9V21H12V18Z" fill="black" />
+              <path d="M21 0H24V3H21V0Z" fill="black" />
+              <path d="M18 0H21V3H18V0Z" fill="black" />
+              <path d="M24 3H27V6H24V3Z" fill="black" />
+              <path d="M24 6H27V9H24V6Z" fill="black" />
+              <path d="M24 9H27V12H24V9Z" fill="black" />
+              <path d="M15 0H18V3H15V0Z" fill="black" />
+              <path d="M21 12H24V15H21V12Z" fill="black" />
+              <path d="M18 15H21V18H18V15Z" fill="black" />
+              <path d="M15 18H18V21H15V18Z" fill="black" />
+              <path d="M15 3H12V6H15V3Z" fill="black" />
+              <path d="M15 21H12V24H15V21Z" fill="black" />
+            </svg>
+          </button>
+          <button class="card-button button-like">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article class="card">
+        <h2 class="card-title">3 спринт: Обходные стратегии</h2>
+        <div class="card-image__wrapper">
+          <span class="card-label">&lt;bypass&gt;</span>
+          <img
+            src="./images/house.avif"
+            alt="автобус"
+            class="card-image saturate"
+          />
+        </div>
+        <div class="card-text__wrapper">
+          <p class="card-text">
+            На этом курсе вы постоянно решали разные задачи. В какой-то момент
+            вам могло показаться, что решения просто иссякли. Значит, пришло
+            время посмотреть на задачу под другим углом.
+          </p>
+          <p class="card-text">
+            Место для ваших воспоминаний о начале третьего спринта.
+          </p>
+        </div>
+        <div class="card-buttons">
+          <button class="card-button card__icon-button">
+            <svg
+              class="like-icon"
+              width="27"
+              height="24"
+              viewBox="0 0 27 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M6 0H3V3H6V0Z" fill="black" />
+              <path d="M9 0H6V3H9V0Z" fill="black" />
+              <path d="M3 3H0V6H3V3Z" fill="black" />
+              <path d="M3 6H0V9H3V6Z" fill="black" />
+              <path d="M3 9H0V12H3V9Z" fill="black" />
+              <path d="M12 0H9V3H12V0Z" fill="black" />
+              <path d="M6 12H3V15H6V12Z" fill="black" />
+              <path d="M9 15H6V18H9V15Z" fill="black" />
+              <path d="M12 18H9V21H12V18Z" fill="black" />
+              <path d="M21 0H24V3H21V0Z" fill="black" />
+              <path d="M18 0H21V3H18V0Z" fill="black" />
+              <path d="M24 3H27V6H24V3Z" fill="black" />
+              <path d="M24 6H27V9H24V6Z" fill="black" />
+              <path d="M24 9H27V12H24V9Z" fill="black" />
+              <path d="M15 0H18V3H15V0Z" fill="black" />
+              <path d="M21 12H24V15H21V12Z" fill="black" />
+              <path d="M18 15H21V18H18V15Z" fill="black" />
+              <path d="M15 18H18V21H15V18Z" fill="black" />
+              <path d="M15 3H12V6H15V3Z" fill="black" />
+              <path d="M15 21H12V24H15V21Z" fill="black" />
+            </svg>
+          </button>
+          <button class="card-button button-like">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article class="card">
+        <h2 class="card-title">3 спринт: Когда опускаются руки</h2>
+        <div class="card-image__wrapper">
+          <span class="card-label">&lt;sadness&gt;</span>
+          <img
+            src="./images/trees.avif"
+            alt="автобус"
+            class="card-image sepia"
+          />
+        </div>
+        <div class="card-text__wrapper">
+          <p class="card-text">
+            Во время учёбы часто возникает чувство, когда не знаешь, за что
+            хвататься. Вроде и проектную пора сдавать, и задачи хочется
+            порешать, и в теории получше разобраться, и жизнь не забыть пожить.
+            В такие моменты очень нужна концентрация. Вспомните, откуда вы её
+            черпали.
+          </p>
+          <p class="card-text">
+            Место для ваших воспоминаний об окончании третьего спринта.
+          </p>
+        </div>
+        <div class="card-buttons">
+          <button class="card-button card__icon-button">
+            <svg
+              class="like-icon"
+              width="27"
+              height="24"
+              viewBox="0 0 27 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M6 0H3V3H6V0Z" fill="black" />
+              <path d="M9 0H6V3H9V0Z" fill="black" />
+              <path d="M3 3H0V6H3V3Z" fill="black" />
+              <path d="M3 6H0V9H3V6Z" fill="black" />
+              <path d="M3 9H0V12H3V9Z" fill="black" />
+              <path d="M12 0H9V3H12V0Z" fill="black" />
+              <path d="M6 12H3V15H6V12Z" fill="black" />
+              <path d="M9 15H6V18H9V15Z" fill="black" />
+              <path d="M12 18H9V21H12V18Z" fill="black" />
+              <path d="M21 0H24V3H21V0Z" fill="black" />
+              <path d="M18 0H21V3H18V0Z" fill="black" />
+              <path d="M24 3H27V6H24V3Z" fill="black" />
+              <path d="M24 6H27V9H24V6Z" fill="black" />
+              <path d="M24 9H27V12H24V9Z" fill="black" />
+              <path d="M15 0H18V3H15V0Z" fill="black" />
+              <path d="M21 12H24V15H21V12Z" fill="black" />
+              <path d="M18 15H21V18H18V15Z" fill="black" />
+              <path d="M15 18H18V21H15V18Z" fill="black" />
+              <path d="M15 3H12V6H15V3Z" fill="black" />
+              <path d="M15 21H12V24H15V21Z" fill="black" />
+            </svg>
+          </button>
+          <button class="card-button button-like">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article class="card">
+        <h2 class="card-title">«Сейчас я здесь»</h2>
+        <div class="card-image__wrapper">
+          <span class="card-label">&lt;Wow&gt;</span>
+          <img
+            src="./images/city.avif"
+            alt="автобус"
+            class="card-image combining"
+          />
+        </div>
+        <div class="card-text__wrapper">
+          <p class="card-text">
+            Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
+            Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с
+            окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И
+            этот мир постоянно меняется. Познать его полностью не получится, но
+            это тот случай, когда важен сам процесс познания. Ведь часто путь —
+            и есть результат.
+          </p>
+          <p class="card-text">
+            Место, чтобы остановиться, подумать и написать, что вы чувствуете в
+            этой точке пути.
+          </p>
+        </div>
+        <div class="card-buttons">
+          <button class="card-button card__icon-button">
+            <svg
+              class="like-icon"
+              width="27"
+              height="24"
+              viewBox="0 0 27 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M6 0H3V3H6V0Z" fill="black" />
+              <path d="M9 0H6V3H9V0Z" fill="black" />
+              <path d="M3 3H0V6H3V3Z" fill="black" />
+              <path d="M3 6H0V9H3V6Z" fill="black" />
+              <path d="M3 9H0V12H3V9Z" fill="black" />
+              <path d="M12 0H9V3H12V0Z" fill="black" />
+              <path d="M6 12H3V15H6V12Z" fill="black" />
+              <path d="M9 15H6V18H9V15Z" fill="black" />
+              <path d="M12 18H9V21H12V18Z" fill="black" />
+              <path d="M21 0H24V3H21V0Z" fill="black" />
+              <path d="M18 0H21V3H18V0Z" fill="black" />
+              <path d="M24 3H27V6H24V3Z" fill="black" />
+              <path d="M24 6H27V9H24V6Z" fill="black" />
+              <path d="M24 9H27V12H24V9Z" fill="black" />
+              <path d="M15 0H18V3H15V0Z" fill="black" />
+              <path d="M21 12H24V15H21V12Z" fill="black" />
+              <path d="M18 15H21V18H18V15Z" fill="black" />
+              <path d="M15 18H18V21H15V18Z" fill="black" />
+              <path d="M15 3H12V6H15V3Z" fill="black" />
+              <path d="M15 21H12V24H15V21Z" fill="black" />
+            </svg>
+          </button>
+          <button class="card-button button-like">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <button class="button-save" onclick="window['dialog'].showModal()">
         <svg viewBox="0 0 39 39" class="button-save__image">
           <use href="./svg/floppy.svg#floppy" />
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
+      <dialog class="dialog" id="dialog">
+        <div class="dialog__info">
+          <svg viewBox="0 0 39 39" class="dialog__image">
+            <use href="./svg/floppy.svg#floppy" />
+          </svg>
+          <h3 class="dialog__title">Вставьте дискету, чтобы продолжить</h3>
+        </div>
+        <button class="dialog__button" onclick="window['dialog'].close()">
+          Ок
+        </button>
+      </dialog>
     </main>
     <script src="./scripts/like.js"></script>
   </body>
