--- a/index.html
+++ b/index.html
@@ -137,11 +137,6 @@
                   class="sparks"
                 />
               </g>
-              <defs>
-                <clipPath id="clip0_0_1575">
-                  <rect width="39" height="36" fill="white" />
-                </clipPath>
-              </defs>
             </svg>
           </button>
           <button class="button button-like">
@@ -203,11 +198,6 @@
                   class="sparks"
                 />
               </g>
-              <defs>
-                <clipPath id="clip0_0_1575">
-                  <rect width="39" height="36" fill="white" />
-                </clipPath>
-              </defs>
             </svg>
           </button>
           <button class="button button-like">
@@ -271,11 +261,6 @@
                   class="sparks"
                 />
               </g>
-              <defs>
-                <clipPath id="clip0_0_1575">
-                  <rect width="39" height="36" fill="white" />
-                </clipPath>
-              </defs>
             </svg>
           </button>
           <button class="button button-like">
@@ -340,14 +325,9 @@
                   class="sparks"
                 />
               </g>
-              <defs>
-                <clipPath id="clip0_0_1575">
-                  <rect width="39" height="36" fill="white" />
-                </clipPath>
-              </defs>
             </svg>
           </button>
-          <button class="button-like">
+          <button class="button button-like">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -406,11 +386,6 @@
                   class="sparks"
                 />
               </g>
-              <defs>
-                <clipPath id="clip0_0_1575">
-                  <rect width="39" height="36" fill="white" />
-                </clipPath>
-              </defs>
             </svg>
           </button>
           <button class="button button-like">
@@ -474,11 +449,6 @@
                   class="sparks"
                 />
               </g>
-              <defs>
-                <clipPath id="clip0_0_1575">
-                  <rect width="39" height="36" fill="white" />
-                </clipPath>
-              </defs>
             </svg>
           </button>
           <button class="button button-like">
@@ -544,11 +514,6 @@
                   class="sparks"
                 />
               </g>
-              <defs>
-                <clipPath id="clip0_0_1575">
-                  <rect width="39" height="36" fill="white" />
-                </clipPath>
-              </defs>
             </svg>
           </button>
           <button class="button button-like">
